--- a/static/index.html
+++ b/static/index.html
@@ -121,16 +121,17 @@
                 return;
             }
 
-            // Creiamo una stringa di query (form url-encoded)
-            const params = new URLSearchParams();
-            params.append("name", cardname);
-            params.append("user_name", username);
+            // Create the JSON body
+            const body = JSON.stringify({
+                name: cardname,
+                user_name: username
+            });
 
-            // Inviamo la richiesta POST con il corpo come form-urlencoded
+            // Send the POST request with the JSON body
             const response = await fetch(`${apiUrl}/cards/`, {
                 method: 'POST',
-                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-                body: params.toString(), // Convertiamo i parametri in una stringa
+                headers: { 'Content-Type': 'application/json' },
+                body: body
             });
 
             if (response.ok) {
