--- a/static/index.html
+++ b/static/index.html
@@ -60,30 +60,34 @@
 
         <div id="login-container">
             <h2>Log In</h2>
-            <div class="form-group">
-                <label for="login-username">Enter your name:</label>
-                <input type="text" id="login-username" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-                <label for="login-password">Enter your password:</label>
-                <input type="password" id="login-password" placeholder="Enter your password">
-            </div>
-            <button onclick="loginUser()">Log In</button>
-            <button onclick="showRegister()">Register</button>
+            <form onsubmit="loginUser(); return false;">
+                <div class="form-group">
+                    <label for="login-username">Enter your name:</label>
+                    <input type="text" id="login-username" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Enter your password:</label>
+                    <input type="password" id="login-password" placeholder="Enter your password">
+                </div>
+                <button type="submit">Log In</button>
+                <button type="button" onclick="showRegister()">Register</button>
+            </form>
         </div>
 
         <div id="register-container" class="hidden">
             <h2>Register</h2>
-            <div class="form-group">
-                <label for="register-username">Enter your name:</label>
-                <input type="text" id="register-username" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-                <label for="register-password">Enter your password:</label>
-                <input type="password" id="register-password" placeholder="Enter your password">
-            </div>
-            <button onclick="registerUser()">Register</button>
-            <button onclick="showLogin()">Back to Login</button>
+            <form onsubmit="registerUser(); return false;">
+                <div class="form-group">
+                    <label for="register-username">Enter your name:</label>
+                    <input type="text" id="register-username" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="register-password">Enter your password:</label>
+                    <input type="password" id="register-password" placeholder="Enter your password">
+                </div>
+                <button type="submit">Register</button>
+                <button type="button" onclick="showLogin()">Back to Login</button>
+            </form>
         </div>
 
         <div id="main-container" class="hidden">
@@ -131,7 +135,7 @@
             document.getElementById("login-container").classList.remove("hidden");
         }
 
-        function loginUser() {
+        async function loginUser() {
             const username = document.getElementById("login-username").value;
             const password = document.getElementById("login-password").value;
             if (!username || !password) {
@@ -139,21 +143,20 @@
                 return;
             }
             const body = JSON.stringify({ user_name: username, password: password });
-            fetch(`${apiUrl}/login/`, {
+            const response = await fetch(`${apiUrl}/login/`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: body
-            }).then(response => {
-                if (response.ok) {
-                    setCookie("username", username, 7);
-                    showMainUI(username);
-                } else {
-                    alert("Login failed.");
-                }
             });
+            if (response.ok) {
+                setCookie("username", username, 7);
+                showMainUI(username);
+            } else {
+                alert("Login failed.");
+            }
         }
 
-        function registerUser() {
+        async function registerUser() {
             const username = document.getElementById("register-username").value;
             const password = document.getElementById("register-password").value;
             if (!username || !password) {
@@ -161,18 +164,17 @@
                 return;
             }
             const body = JSON.stringify({ user_name: username, password: password });
-            fetch(`${apiUrl}/register/`, {
+            const response = await fetch(`${apiUrl}/register/`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: body
-            }).then(response => {
-                if (response.ok) {
-                    alert("Registration successful! Please log in.");
-                    showLogin();
-                } else {
-                    alert("Registration failed.");
-                }
             });
+            if (response.ok) {
+                alert("Registration successful! Please log in.");
+                showLogin();
+            } else {
+                alert("Registration failed.");
+            }
         }
 
         function logoutUser() {
